# opal

./: .gitignore  .travis.yml  LICENSE  META  Makefile  README.md  _oasis  _tags  dune  dune-project  myocamlbuild.ml  opal.ml  opal.mli  opam  setup.ml
examples/: calc.ml  infer.ml  intuitive.ml  while-language-fp.ml  while.ml
src/: META  opal.ml  opal.mllib
